--- a/app/templates/variants/_addVariantsNetwork.hbs
+++ b/app/templates/variants/_addVariantsNetwork.hbs
@@ -20,6 +20,11 @@
         <input type="radio" name="platform" value="iOS">
         Apple Push Network
     </label>
+    <div>
+        <input type="radio" name="otherplatform" value="iOS"> iOS
+        <br>
+        <input type="radio" name="otherplatform" value="safari"> Safari
+    </div>
     <div class="network-help"><a href="http://aerogear.org/docs/guides/aerogear-push-ios/" target="_blank">AeroGear Help</a></div>
     <div class="network">
         <label>Passphrase</label>
